--- a/src/components/Com2.css
+++ b/src/components/Com2.css
@@ -1,11 +1,16 @@
 .com2background{
-    background: conic-gradient(at 0% 110%, rgba(0, 0, 0, 0.2) 0deg, rgba(255, 255, 255, 0.95) 25deg 335deg, rgba(20, 20, 20, 0.2) 360deg);
-    
-
-    width: 50%;
-    align-items: flex-end;
+    position: absolute;
+    border-top: 200px solid ;
+    border-right: 1440px solid rgb(2, 2, 2);
+    border-bottom: 200px solid transparent;
+    z-index: 0;
 }
-
+.com2Text{
+    position: relative;
+    padding-left: 70%;
+    /* width: 50%; */
+    z-index: 2;
+}
 .box{
 
 width: 250px;
@@ -23,17 +28,14 @@ border-radius: 15px;
     padding: 100px 0px !important;
   }
   
-  .circle-container-consultancy {
-    /* position: relative; */
-    /* border-radius: 51%; */
-    /* border: 30px solid #ffffff; */
-    /* box-sizing: border-box; */
+  .circle-container {
+
     filter: drop-shadow(10px 6px 5px #b833eb);
     width: 462px;
     height: 462px;
   }
   
-  .circle-container-consultancy > div {
+  .circle-container > div {
     display: block;
     position: absolute;
     top: 50%;
@@ -42,10 +44,7 @@ border-radius: 15px;
     height: 8em;
     margin: -4em !important;
   }
-  .circle-container > div > .Com4-diamond {
-    display: block;
-    width: 100%;
-  }
+
   .deg45 {
     transform: rotate(45deg) translate(12em) rotate(-45deg);
   }
@@ -113,7 +112,7 @@ border-radius: 15px;
     color: #fafafa;
   }
 
-  .Consultancydia > h2{
+  .com4box > h2{
     transform: rotate(-10deg);
     transform: rotate(-45deg);
     margin-left: -15px;
@@ -121,7 +120,7 @@ border-radius: 15px;
     margin-right: 20px !important;
   }
   
-  .Consultancydia > p {
+  .com4box > p {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
